# msdf-atlas-gen

./: .gitmodules  CMakeLists.txt
msdf-atlas-gen/: msdf-atlas-gen.h
